--- a/templates/add_author.html
+++ b/templates/add_author.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
   </head>
   <body>
-
+  {% if status == 'success' %}
+  <p style="color: green;">Author was added successfully.</p>
+  {% endif %}
   <form action="/add_author" method="POST">
   <label for="name">Author Name:</label>
   <input type="text" id="name" name="name" required><br><br>
