--- a/templates/add_book.html
+++ b/templates/add_book.html
@@ -7,8 +7,30 @@
   </head>
   <body>
 
-  <form action="/add_author" method="POST">
-  <!-- Add the form here -->
+  {% if status == 'success' %}
+  <p style="color: green;">Book was added successfully.</p>
+  {% elif status == 'failure' %}
+    <p style="color: red;">Book was not added. {{ warning }}.</p>
+  {% endif %}
+
+  <form action="/add_book" method="POST">
+    <label for="isbn">Book ISBN:</label>
+    <input type="text" id="isbn" name="isbn" required><br><br>
+
+    <label for="title">Book Title:</label>
+    <input type="text" id="title" name="title" required><br><br>
+
+    <label for="publication_year">Publication year:</label>
+    <input type="number" id="publication_year" name="publication_year" required><br><br>
+
+    <label for="author_id">Choose book author:</label>
+    <select name="author_id" id="author_id" required>
+      {% for author in authors %}
+      <option value="{{ author.id }}">{{ author.name }}</option>
+      {% endfor %}
+
+    </select>
+
   </form>
 
   </body>
