--- a/templates/add_book.html
+++ b/templates/add_book.html
@@ -25,12 +25,12 @@
 
     <label for="author_id">Choose book author:</label>
     <select name="author_id" id="author_id" required>
+      <option value=""> -- Select -- </option>
       {% for author in authors %}
       <option value="{{ author.id }}">{{ author.name }}</option>
       {% endfor %}
-
-    </select>
-
+    </select> <br><br>
+    <input type="submit" value="Add book">
   </form>
 
   </body>
