--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,8 @@
   <body>
 
     {% for book in books %}
-    <div> <h3>{{ book.title }}</h3>
+    <div> <h3>{{ book[0].title }}</h3>
+      <h5>by {{ book[1].name }}</h5>
     </div>
     {% endfor %}
 
