--- a/templates/home.html
+++ b/templates/home.html
@@ -7,31 +7,38 @@
     <link rel="stylesheet" href="static/style.css">
   </head>
   <body>
-  <form action="/" method="get">
+  <form action="/" method="get" class="sorting-form">
     <input type="checkbox" id="sort" onclick="toggleVisibility('sorting')">
     <label for="sort">Sort books</label>
     <div id="sorting" class="hidden">
-      <input type="radio" id="sort-author" value="author">
-      <label for="sort-author">By author name</label>
-
-      <input type="radio" id="sort-title" value="title">
-      <label for="sort-title">By book title</label>
-
-      <input type="radio" id="sort-year" value="publication_year">
-      <label for="sort-year">By publication year</label>
+      <div class="radio-button">
+        <input type="radio" id="sort-author" name="sort-order" value="author">
+        <label for="sort-author">By author name</label>
+      </div>
+      <div class="radio-button">
+        <input type="radio" id="sort-title" name="sort-order" value="title">
+        <label for="sort-title">By book title</label>
+      </div>
+      <div class="radio-button">
+        <input type="radio" id="sort-year" name="sort-order" value="publication_year">
+        <label for="sort-year">By publication year</label>
+      </div>
 
       <input type="submit" value="Sort books">
     </div>
   </form>
-
+  <div class="books">
     {% for book in books %}
 
-    <div>
+    <div class="book">
       <img src="https://covers.openlibrary.org/b/isbn/{{ book[0].isbn }}-M.jpg" />
-      <h3>{{ book[0].title }}</h3>
-      <h5>by {{ book[1].name }}</h5>
+      <div class="book-info">
+        <h3>{{ book[0].title }}</h3>
+        <h5>by {{ book[1].name }}</h5>
+      </div>
     </div>
     {% endfor %}
+  </div>
   <script src="static/main.js"></script>
   </body>
 </html>
