--- a/static/style.css
+++ b/static/style.css
@@ -5,12 +5,21 @@
 body {
     background-color: #eee;
 }
+
 .hidden {
     display: none !important;
 }
 
+.forms {
+    display: grid;
+    grid-template-columns: auto auto;
+    justify-content: start;
+    grid-gap: 24px;
+    margin: 28px;
+}
+
 .sorting-form {
-    margin: 32px;
+    min-width: 160px;
 }
 
 .sorting-form input[type='submit'] {
