--- a/templates/home.html
+++ b/templates/home.html
@@ -33,6 +33,8 @@
       <input type="submit" value="Search">
 
     </form>
+
+    <a href="/"><button>Clear filters</button></a>
   </div>
 
   {% if message is defined %}
